<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:background="@color/white">

        <include layout="@layout/content_toolbar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.tencent.tencentmap.mapsdk.map.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/selector_map_input"
                android:button="@null" />

            <ImageView
                android:id="@+id/img_loc"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/checkbox"
                android:scaleType="centerCrop"
                android:src="@drawable/selector_map_loc" />

            <FrameLayout
                android:id="@+id/bottom_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="18dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/bg_white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="10dp">

                        <ImageView
                            android:id="@+id/img_mock"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/selector_mock"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/tv_mock"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dp"
                            android:text="@string/no_mock"
                            android:textColor="@drawable/selector_text_green" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <!--<ImageView
                            android:id="@+id/img_collect_address"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="5dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/selector_collect_star" />-->

                        <io.virtualapp.widgets.fittext.FitTextView
                            android:id="@+id/tv_address"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:lines="2"
                            android:maxLines="2"
                            android:text="@string/unknown_location"
                            android:textColor="@color/gray9"
                            app:ftMaxTextSize="20sp"
                            app:ftMinTextSize="10sp"
                            tools:text="1111111111111111111111a asd111111asd asd11111111 sadasdasdsadasdsdadasd" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_weight="1" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/label_lat"
                                android:textColor="@color/gray9" />

                            <TextView
                                android:id="@+id/tv_lat"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="-"
                                android:textColor="@color/gray9"
                                tools:text="24.023456" />

                        </LinearLayout>

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_weight="1" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/label_lng"
                                android:textColor="@color/gray9" />

                            <TextView
                                android:id="@+id/tv_lng"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="-"
                                android:textColor="@color/gray9"
                                tools:text="114.023456" />
                        </LinearLayout>

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_weight="1" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/img_go_mock"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="right|top"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="30dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/map_postion_green" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_centerInParent="true">

                <ImageView
                    android:id="@+id/img_center_market"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="top"
                    android:scaleType="fitXY"
                    android:src="@drawable/map_select_location" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/search_layout"
                style="@style/Theme.AppCompat.Light"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dialogColorPrimary"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/tv_tip_search"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryRavel2"
                    android:paddingBottom="2dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:paddingTop="2dp"
                    android:text="@string/tip_search_keyword" />

                <io.virtualapp.widgets.ListViewPlus
                    android:id="@+id/search_results"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:dividerHeight="1dp"
                    android:divider="@color/holo_blue_dark"/>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/img_stop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dialogColorPrimary2"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/img_stop_mock"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@drawable/map_stop" />
            </FrameLayout>

        </RelativeLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>